@@ -27,3 +27,10 @@ rootLogger.appenderRef.stdout.ref = STDOUT
 #logger.file.appenderRefs = file
 #logger.file.appenderRef.file.ref = ERRORLOG
 #logger.file.additivity=false
+
+loggers=console
+logger.console.name=org.hibernate
+logger.console.level = fatal
+logger.console.appenderRefs = stdout
+logger.console.appenderRef.file.ref = STDOUT
+logger.console.additivity=false
