@@ -14,6 +14,9 @@
  - Updated OAuth2Client JSON definition and controller tests (margaretha)
 2021-04-26
  - Updated OAuth2 Client list (margaretha)
+2021-04-30
+ - Updated parameters in the error responses of OAuth2 APIs for coherence (margaretha)
+ 
  
 # version 0.63
 26/10/2020
